feat: #255 Allow the deletion of an artifact
